  - support client-to-client communication
  - "update" and "rescan" need only "CONTROL" permission
* input:
  - cdio_paranoia: new input plugin to play audio CDs
  - curl: enable CURLOPT_NETRC
  - soup: new input plugin based on libsoup
  - ffmpeg: support libavformat 0.7
* decoder:
  - mpg123: implement seeking
  - ffmpeg: drop support for pre-0.5 ffmpeg
  - ffmpeg: support libavformat 0.7
* output:
  - osx: allow user to specify other audio devices
  - raop: new output plugin
  - shout: add possibility to set url
  - roar: new output plugin for RoarAudio
* state_file: add option "restore_paused"
* cue: show CUE track numbers


ver 0.16.4 (2011/??/??)
* don't abort configure when avahi is not found
* auto-detect libmad without pkg-config
* fix memory leaks
* don't resume playback when seeking to another song while paused
* apply follow_inside_symlinks to absolute symlinks
* fix playback discontinuation after seeking
* input:
  - curl: limit the receive buffer size
  - curl: implement a hard-coded timeout of 10 seconds
* decoder:
  - ffmpeg: workaround for semantic API change in recent ffmpeg versions
  - flac: validate the sample rate when scanning the tag
  - wavpack: obey all decoder commands, stop at CUE track border
* encoder:
  - vorbis: don't send end-of-stream on flush
* output:
  - alsa: fix SIGFPE when alsa announces a period size of 0
  - httpd: don't warn on client disconnect
  - osx: don't drain the buffer when closing
  - pulse: fix deadlock when resuming the stream
  - pulse: fix deadlock when the stream was suspended


ver 0.16.3 (2011/06/04)
* fix assertion failure in audio format mask parser
* fix NULL pointer dereference in playlist parser
* fix playlist files in base music directory
* database: allow directories with just playlists
* decoder:
  - ffmpeg: support libavcodec 0.7


ver 0.16.2 (2011/03/18)
* configure.ac:
  - fix bashism in tremor test
* decoder:
  - tremor: fix configure test
  - gme: detect end of song
* encoder: