@@ -84,11 +84,6 @@ For Ogg Vorbis support.  You will need libogg and libvorbis.
 FLAC - http://flac.sourceforge.net/
 For FLAC support.  You will need version 1.1.0 or higher of libflac.
 
-OggFLAC - http://www.xiph.org/ogg/vorbis/ and http://flac.sourceforge.net/
-For OggFLAC support.  You will need liboggflac, which can be built from the
-FLAC sources if libogg is already installed.  Versions of flac 1.1.3 and
-greater will automatically detect and use OggFLAC if it's available.
-
 Audio File - http://www.68k.org/~michael/audiofile/
 For WAVE, AIFF, and AU support.  You will need libaudiofile.
 
