@@ -11,6 +11,7 @@ ver 0.17 (2011/??/??)
   - mpg123: implement seeking
   - ffmpeg: drop support for pre-0.5 ffmpeg
   - ffmpeg: support libavformat 0.7
+  - oggflac: delete this obsolete plugin
 * output:
   - osx: allow user to specify other audio devices
   - raop: new output plugin
